yet missing eyebrows

--- a/eevee/index.html
+++ b/eevee/index.html
@@ -20,10 +20,19 @@
       </div>
     </div>
     <div class="third-chunk">
-      <div class="line"></div>
+      <div class="face-outer">
+        <div class="right-eye">
+          <div class="reflect-eye"><div class="eyebrow-right"></div></div>
+        </div>
+        <div class="left-eye">
+          <div class="reflect-eye"><div class="eyebrow-left"></div></div>
+        </div>
+      </div>
     </div>
     <div class="fourth-chunk">
-      <div class="line"></div>
+      <div class="line">
+        <div class="mouth"><div class="nose"></div></div>
+      </div>
     </div>
   </div>
 </body>
