--- a/pikachu/index.html
+++ b/pikachu/index.html
@@ -19,11 +19,20 @@
                 <div class="tip"></div>
             </div>
         </div>
-        <div class="box3">
-
-        </div>
-        <div class="box4">
-
+        <div class="face">
+            <div class="face-eyes-zone">
+                <div class="eye"><div class="reflect-eye"></div></div>
+                <div class="eye"><div class="reflect-eye"></div></div>
+            </div>
+            <div class="face-mouth-zone">
+                <div class="side-face"></div>
+                <div class="mouth-zone">
+                    <div class="mouth-part"></div>
+                    <div class="mouth-part"></div>
+                    <div style="position:absolute;top: -10px">▼</div>
+                </div>
+                <div class="side-face"></div>
+            </div>
         </div>
     </div>
 </body>
